tests/paczka1/small_fuzzy/16601859.err
Error in line 5: A370 A152 5,8
Error in line 6: A370 A370 62,1
Error in line 7: A370 A152 71,4
